# Koopa_Vivarium

./: .gitignore  CMakeLists.txt  LICENCE.md  README.md  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  DHT22.c  DHT22.h  DHT222.c  app_nvs.c  app_nvs.h  http_server.c  http_server.h  local_api.c  main.c  mqtt.c  mqtt.h  relays.c  relays.h  sntp_time.c  sntp_time.h  tasks_common.h  wifi_app.c  wifi_app.h  wifi_reset_button.c  wifi_reset_button.h
main/webpage/: app.css  app.js  index.html
main/website/home/: app.css  app.js  index.html
main/website/settings/: settings.css  settings.html  settings.js
